# BASS-2

./: .gitignore  .gitmodules  .qmlls.ini  3  CMakeLists.txt  METAMANAGER_REDESIGN.md  README.md  RECENTPROJECTS_REFACTOR_CHECKLIST.txt  main.cpp
.cache/clangd/index/: annotationmodel.cpp.94A7ED8EE60024A6.idx  annotationmodel.h.5C095668041D341D.idx  audioplayer.cpp.6877855C1E8E6126.idx  audioplayer.h.FCD0E9995B6BAF6F.idx  filelistmodel.cpp.8DC155B502985A41.idx  filelistmodel.h.124190513248D1F5.idx  main.cpp.2DE7E38D91565324.idx  projectmanager.cpp.F72725F8B774E707.idx  projectmanager.h.493BE5579288D387.idx  spectrogramprovider.cpp.751E879C583D8EBD.idx  spectrogramprovider.h.14E5A4FE1E4E34ED.idx
.github/workflows/: cmake-multi-platform.yml
Profiles/BASS V1.0a Profile .trace/Trace1.run/: RunIssues.storedata
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/core-config/: exposedTableInfo.plist
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-0/: bulkstore  bulkstore_descriptor  spindex.0
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-1/: bulkstore  bulkstore_descriptor  spec.plist  spindex.0
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-10/: spec.plist
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-11/: bulkstore  bulkstore_descriptor  spindex.0
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-12/: bulkstore  spec.plist  spindex.0
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-13/: spec.plist
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-16/: bulkstore  bulkstore_descriptor  spec.plist  spindex.0  spindex.1  spindex.2  spindex.3  spindex.4
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-17/: spec.plist
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-18/: bulkstore  spindex.0
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-19/: spec.plist
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-2/: bulkstore  bulkstore_descriptor  spec.plist  spindex.0
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/stores/indexed-store-20/: spec.plist
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/table-manager/: tables.plist
Profiles/BASS V1.0a Profile .trace/corespace/run1/core/uniquing/: strings
Profiles/BASS V1.0a Profile .trace/symbols/stores/: 011533A8-E860-3FBB-B9B1-35CAE8C404DE.symbolsarchive  014C9F35-2C58-35B4-B788-049335BA65AD.symbolsarchive  018D8A91-B42D-3A30-AC6B-57A315356AB8.symbolsarchive  01D8F620-F65B-394E-85E7-CE7D4D7C9715.symbolsarchive  01FFC32E-315D-35E6-890E-F848470C6AE9.symbolsarchive  0205865F-BA31-3387-9049-2A2A72B642F0.symbolsarchive  024BB3B1-CAFC-38F4-AAA0-136B007F880E.symbolsarchive  027A1AD3-376D-3814-8094-7E0F94B341FA.symbolsarchive  029C6143-1D21-352D-BF48-A973ABF86A13.symbolsarchive  02A4BCA7-031E-3472-A930-F02B4EA13F3A.symbolsarchive  038A79BA-C896-30E6-96E2-07EC323EC498.symbolsarchive  0399BF5C-6557-3AC6-86E4-542CE59DD4DA.symbolsarchive  03E547C9-DBB0-3051-96BA-A59CC4E7F738.symbolsarchive  0493293D-513D-3E5D-A5DA-ED9F7E63D8D0.symbolsarchive  04CC19BD-724E-32FC-9DC8-473514A37448.symbolsarchive  05057592-E2E2-3B45-8A3A-E810CD3FAF17.symbolsarchive  059B15FB-1DBC-34DD-BDD9-5DE4F537D8E9.symbolsarchive  068990E8-29DB-3C9C-A07C-8BA8D910086B.symbolsarchive  06EAD6CF-9609-311D-BEB3-7175C901E491.symbolsarchive  07181B88-66B5-340F-AC95-AD80365B765C.symbolsarchive  07324457-7582-37AD-B3CA-FFF1D06F57F7.symbolsarchive  07759DE1-6105-3E0C-AB95-40D279E68645.symbolsarchive  08A15854-B148-3684-A809-D90310846F0F.symbolsarchive  090E5BB4-0D1B-329A-8D03-F73160989936.symbolsarchive  099343C8-B0F7-3598-8CF9-96468CEA3E29.symbolsarchive  09DCE1F7-0CD1-3E31-8B31-7A4B48E2F94D.symbolsarchive  0A177DE0-3367-30AD-8BF9-63EFBECD3F88.symbolsarchive  0A561EC3-4C0E-3B4B-81FD-A076E6D14AA1.symbolsarchive  0ACBB6DE-09C1-31D0-A020-978334820483.symbolsarchive  0B6CD23F-A588-3EBC-91AB-20D03F00F351.symbolsarchive  0BC2C95B-9AB4-32BF-AD12-0F9F2582D0D4.symbolsarchive  0C4A19B4-EDDF-3585-BB37-CB1E0F04AF1D.symbolsarchive  0C55E58A-1989-3A2B-B0AC-5FCB9371C6B1.symbolsarchive  0CBCCF56-3EBF-3E7D-8396-A19AC4A4953A.symbolsarchive  0CF4BFFD-9C7F-3E32-AAE8-E860A7A3CFF2.symbolsarchive  0D35FBDA-3BE3-30D8-9C04-8E8AFA7F8338.symbolsarchive  0F0CF957-D75C-3109-9AAA-FF640EB7C8D1.symbolsarchive  0FCBF180-F24B-3F2C-A506-E5C44B92C9BE.symbolsarchive  10094A6C-FA57-367F-B06E-7C449EA31285.symbolsarchive  1011183B-CBC7-303C-AFDC-B7E0BCC15E1E.symbolsarchive  (+681 more)
cmake/: FindQwt.cmake
qml/: AnnotationOverlay.qml  InfoBar.qml  Main.qml  SideDrawer.qml  SpectrogramView.qml
qml/dialogs/: LoadingSplashScreen.qml  ProjectInitDialog.qml  ProjectSelectWindow.qml  PromptDialog.qml
qml/panels/: ClusterSummaryPanel.qml  ControlPanel.qml  FilesPanel.qml  PlayerPanel.qml  SettingsPanel.qml
src/: Irastercompatibledata.h  annotationframe.h  annotationmodel.cpp  annotationmodel.h  audioFilesModel.cpp  audioFilesModel.h  audioplayer.cpp  audioplayer.h  bassproject.cpp  bassproject.h  datarasterfactory.cpp  datarasterfactory.h  errorinator.h  fftforeman.h  filelistmodel.cpp  filelistmodel.h  metamanager.cpp  metamanager.h  projectFactory.cpp  projectFactory.h  projectmanager.cpp  projectmanager.h  recentProject.h  recentprojectslistmodel.cpp  recentprojectslistmodel.h  result.h  serializationtraits.h  sharedconstants.h  spectrogramdatarasterinstance.h  spectrogramprovider.cpp  spectrogramprovider.h  wavfile.h  wavsurfer.cpp  wavsurfer.h
tests/: CMakeLists.txt  test_fftforeman.cpp  test_metamanager.cpp  test_projectfactory.cpp  test_recentprojects.cpp  test_wavfile.cpp  test_wavsurfer.cpp
(+262 files in other folders)
